# airos-recovery

./: Cargo.toml
src/: main.rs
src/fixes/: add_boot_entry.rs
src/screens/: after_efibootmgr.rs  index.rs  os_version.rs  welcome_screen.rs
src/utils/: disks.rs  mount.rs  version.rs
