[package]
name = "airos-recovery"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
console = "0.15.8"
dialoguer = "0.11.0"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
